<resources>
    <string name="app_name">叫号系统</string>
    <string name="action_settings">Settings</string>
    <string name="desc"></string>
    <string name="Cander_call">企业叫号</string>
    <string name="call">叫号</string>
    <string name="next">下一位</string>
    <string name="set">设置</string>
    <string name="Room_call">房间叫号</string>
    <string name="checkbox">下次自动登录</string>
     <string name="login">登录</string>
      <string name="replase">注册</string>
     <string name="call_conten"></string>
      <string name="user_name">用户名</string>
       <string name="password">密码</string>

    
      
    
    
</resources>