<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/call_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cander_call" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/call_conten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:textSize="20dp"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/call_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next" />

        <Button
            android:id="@+id/set_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/Room_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Room_call" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/call_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Room_calls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call"/>

        <Button
            android:id="@+id/Room_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:text="@string/next" />

        <Button
            android:id="@+id/Room_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"  />

    </LinearLayout>

</LinearLayout>